@@ -1,6 +1,11 @@
+2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * libseahorse/seahorse-gconf.c:
+    * libseahorse/seahorse-hkp-source.c: Fix compiler warnings
+    
 2005-05-14  Nate Nielsen  <nielsen@memberwebs.com>
 
-    * seahorse-preferences.c: HIGify 'Visible Columns' tab.
+    * src/seahorse-preferences.c: HIGify 'Visible Columns' tab.
     Patch from Jim Pharis (bug #304212)
     
 2005-05-10  Nate Nielsen  <nielsen@memberwebs.com>
